--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "rules": {
       "linebreak-style": [0, "windows"],
       "indent": ["error", 4],
-      "max-len": [0, 0]
+      "max-len": [0, 0],
+      "object-shorthand": 0,
+      "func-names": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
