--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
@@ -35,9 +36,18 @@
       "@vue/airbnb"
     ],
     "rules": {
-      "linebreak-style": [0, "windows"],
-      "indent": ["error", 4],
-      "max-len": [0, 0],
+      "linebreak-style": [
+        0,
+        "windows"
+      ],
+      "indent": [
+        "error",
+        4
+      ],
+      "max-len": [
+        0,
+        0
+      ],
       "object-shorthand": 0,
       "func-names": 0
     },
